[package]
name = "slashlib"
version = "0.1.0"
edition = "2021"
authors = ["SkyezerFox (Kaylen Dart) <actuallyori@gmail.co>"]

[features]
default = ["webhook"]
webhook = ["warp"]
gateway = ["serenity"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
lazy_static = "1"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
warp = {version = "0.3", optional = true }
serenity = { version = "0.10", optional = true }